# orthodoxy

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  config.yaml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: deck.txt
docs/schemas/: DATA.md  core.json  full.json
src/: __init__.py
src/analysis/: archive.py  card_resolver.py  cards.py  decks.py  schema.py  writer.py
src/core/: config.py  errors.py
src/interface/: cli.py
src/io/parsers/: deck.py
src/io/writers/: card.py
src/orthodoxy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/processing/: batch.py  filters.py
src/services/: analysis.py  file_stream.py  filter_parser.py
src/utils/: container.py  interfaces.py  models.py
tests/: __init__.py  conftest.py  test_batch.py  test_card_filter_service.py  test_card_resolver.py  test_card_set_writer.py  test_cards.py  test_cli.py  test_cli_deck_extract.py  test_config.py  test_container.py  test_container_extended.py  test_deck.py  test_deck_extractor.py  test_deck_parser_extended.py  test_errors.py  test_filters.py  test_filters_extended.py  test_fixtures.py  test_interfaces_additional.py  test_interfaces_impl.py  test_models_extended.py  test_processing.py  test_service.py  test_service_card_filter.py  test_service_file_processor.py  test_service_parser.py  test_writer.py  test_writer_stats.py
