[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orthodoxy"
version = "0.1.0"
description = "Card deck management system"
requires-python = ">=3.12"
dependencies = [
    "ijson>=3.3.0",
    "tqdm>=4.67.0",
    "pydantic>=2.10.1",
    "structlog>=24.4.0",
    "typing-extensions>=4.12.2",
    "pytest>=8.3.3",
    "click>=8.1.7",
    "pyyaml>=6.0.2",
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.pylance]
reportMissingImports = "warning"
reportMissingModuleSource = "warning"
